media/libcubeb/update.sh
@@ -57,5 +57,3 @@ else
   echo "Remember to update README_MOZILLA with the version details."
 fi
 
-patch -p3 < bug1278612.patch
-
